<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_record"
        android:icon="@drawable/ic_nav_record"
        android:title="@string/nav_record" />

    <item
        android:id="@+id/nav_expense"
        android:icon="@drawable/ic_nav_expense"
        android:title="@string/nav_expense" />

    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_nav_report"
        android:title="@string/nav_report" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />

</menu>
